--- a/site/estilos.css
+++ b/site/estilos.css
@@ -80,8 +80,10 @@ div.main
 {
 	display:inline-block;
 	margin: 0;
-	width: 606px;
+	width: 760px;
 	float:right;
+	margin-top:5px;
+	margin-right:5px;
 	text-align:justify;
 	
 	border: 1px solid black;
