implementacao da listagem de itinerarios numa lista ao clicar em cada item, redireciona a pagina para mostrar os locais implementacao dos CSS para o :hover do mouse em cada linha mudar a cor da linha
Botao submit -> AINDA NAO FUNCIONA

Falta implementar a listagem dos locais

--- a/site/estilos.css
+++ b/site/estilos.css
@@ -147,7 +147,7 @@ div.erro_registo
 	border: 1px solid black;
 }
 
-div.local_paragem
+/*div.local_paragem
 {
 	display:block;
 	float:left;
@@ -165,7 +165,7 @@ div.local_espera
 	text-align:left;
 
 	border:1px solid black;
-}
+}*/
 
 div.rodape
 {
@@ -194,6 +194,37 @@ table.procurar_boleia_inserir
 table.procurar_boleia_inserir tr td
 {
 	border: 1px solid black;
+}
+
+table.locais_itinerario tr td
+{
+	border: 1px solid black;
+}
+
+table.locais_itinerario tr.itinerario_completo
+{
+	border: 1px solid black;
+	color:black;
+}
+
+table.locais_itinerario tr.itinerario_incompleto
+{
+	border: 1px solid black;
+	color:red;
+}
+
+table.locais_itinerario tr.itinerario_completo:hover
+{
+	border: 1px solid black;
+	color:white;
+	background-color:black;
+}
+
+table.locais_itinerario tr.itinerario_incompleto:hover
+{
+	border: 1px solid black;
+	color:red;
+	background-color:black;
 }
 
 div.menuEsquerdo
